# atlas

./: .env.example  .gitignore  README.md  brainstorming.md  further improvements.md  implementation plan.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: cli.py  config.py  main.py  models.py
backend/app/agent/: __init__.py  executor.py  graph.py  llm.py  planner.py  refine.py  state.py  synthesizer.py
backend/app/brief/: __init__.py  chart_specs.py  renderer.py
backend/app/brief/templates/: _brief_macros.html  _brief_macros_pdf.html  brief.html  brief_pdf.html
backend/app/brightdata/: __init__.py  mcp_client.py  scraping_browser.py  serp.py  web_scraper_api.py  web_unlocker.py
backend/app/modules/: __init__.py  _fixtures.py  altdata.py  altdata_data.py  base.py  exposure.py  exposure_data.py  filing.py  filing_data.py  investor.py  investor_data.py  signal.py  signal_data.py  trueprice.py  trueprice_data.py  trueprice_targets.py  visual.py  visual_data.py
backend/tests/: test_altdata.py  test_exposure.py  test_filing.py  test_investor.py  test_modules.py  test_planner.py  test_renderer.py  test_signal.py  test_smoke.py  test_synthesizer.py  test_trueprice.py  test_visual.py
demo/: queries.json  targets.md
demo/exposure/: README.md  controlled-github-snippet.txt  controlled-pastebin.txt
demo/lookalikes/: README.md  legit-acmecorp.html  lookalike-color-swap.html  lookalike-typo-domain.html
docs/: ARCHITECTURE.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  (+2 more)
(+7 files in other folders)
