[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas — Autonomous Enterprise Intelligence Platform (foundation)"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # Agent orchestration
    "langgraph>=0.2.20",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",

    # MCP client (Bright Data MCP Server)
    "mcp>=1.0.0",

    # Data + templating
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-dotenv>=1.0",

    # Pretty CLI output
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
pdf = [
    # Day 8 — pure-Python PDF stack (reportlab under the hood). Picked
    # over WeasyPrint because we don't want a GTK runtime dep on Windows
    # dev boxes; xhtml2pdf is "good enough" for an institutional-looking
    # PDF and ships as a normal pip install.
    "xhtml2pdf>=0.2.16",
    "svglib>=1.5",  # SVG-in-HTML bar charts in the PDF template
    "reportlab>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.brief" = ["templates/*.html"]
"app.modules" = ["fixtures/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
